non-empty fields

--- a/themes/drone/i18n/en.yaml
+++ b/themes/drone/i18n/en.yaml
@@ -2,9 +2,9 @@
   translation: Next Steps
 
 - id: questions
-  translation:
+  translation: ""
 - id: questions_text
-  translation:
+  translation: ""
 
 - id: page_meta
-  translation:
+  translation: ""
